--- a/TestRepoStuff/Templates/scratchpad.html
+++ b/TestRepoStuff/Templates/scratchpad.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
+<head>an edit
   <meta charset="utf-8">
   <title>Dataparam 1</title>
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
