--- a/TestRepoStuff/Templates/DataparamEditorProto2.html
+++ b/TestRepoStuff/Templates/DataparamEditorProto2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Data Param Editor</title>
+    <title>Data Param Editor Test</title>
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
